<resources>
    <string name="app_name" translatable="false">SEI804 CPU Temperature</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="button">Select button</string>
    <string name="button_summary">Select a button to display the toast message with the temperature.</string>
    <string name="enable_usb_debugging_first">Enable USB debugging first in the developer options</string>
    <string name="temperature_request">Temperature request</string>
    <string name="temperature_request_summary">Left: ThermalService\nRight: HardwareProperties</string>
    <string name="temperature_unit">Temperature unit</string>
    <string name="temperature_unit_summary">Left: Celsius\nRight: Fahrenheit</string>
    <string name="cpu_temperature_celsius">CPU Temperature: %1$s°C</string>
    <string name="cpu_temperature_fahrenheit">CPU Temperature: %1$s°F</string>

    <string-array name="key_code_labels">
        <item>Bookmark button</item>
        <item>TV Guide button</item>
        <item>Red button</item>
        <item>Green button</item>
        <item>Yellow button</item>
        <item>Blue button</item>
        <item>Button 0</item>
        <item>Button 1</item>
        <item>Button 2</item>
        <item>Button 3</item>
        <item>Button 4</item>
        <item>Button 5</item>
        <item>Button 6</item>
        <item>Button 7</item>
        <item>Button 8</item>
        <item>Button 9</item>
        <item>None</item>
    </string-array>

    <string-array name="key_codes">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
    </string-array>
</resources>
